<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">领到雇佣</string>
    <string name="press_again_to_close_application">再按一次退出</string>
    <string name="error_network">网络错误，请检查网络是否连接</string>
    <string name="loading_pb_title">正在更新数据</string>
    <string name="last_page">已经是最后一页了</string>
    <string name="swipe_refresh_counts">加载了%1$s条数据</string>
    <string name="error_no_login">尚未登录</string>
    <string name="resend_identify_code">重发验证码</string>
    <string name="resend_after_seconds">%1$d秒后重发</string>
    <string name="notify_title">提示</string>
    <string name="notify_message">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="no_data">暂无数据</string>
    <string name="state_loading">正在加载&#8230;</string>
    <string name="state_loading_more">加载更多</string>
    <string name="state_loading_error">加载失败，请重新加载</string>
    <string name="state_not_more">我是有底线的~~</string>
    <string name="state_not_data">暂无数据</string>
    <string name="state_not_network_error">请检查网络</string>
    <string name="state_network_request_error">网络请求失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_submit">正在处理</string>
    <string name="state_load_error_click_to_refresh">数据加载失败，请点击重新加载</string>
    <string name="wechat_login_content">手机绑定微信后，下次直接用微信登录</string>
    <string name="qq_login_content">手机绑定QQ后，下次直接用QQ登录</string>
    <string name="sms_identify_code">短信验证码</string>
    <string name="get">获取</string>
    <string name="password_login">密码登录</string>
    <string name="sms_identify_code_login">验证码登录</string>
    <string name="login_and_agree">登录表示同意</string>
    <string name="allintask_user_agreement">《allintask用户协议》</string>
    <string name="user_agreement">用户协议</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="bind">绑定</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="phone_number_home_location">手机号归属地</string>
    <string name="common">常用</string>
    <string name="set_new_password">设置新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="confirm_set">确认设置</string>
    <string name="complete_information">完善资料</string>
    <string name="complete_later">以后再填</string>
    <string name="skip">跳过</string>
    <string name="hot_skills">热门技能</string>
    <string name="one_key_experience">一键体验</string>
    <string name="guess_you_need_to">猜你需要</string>
    <string name="upload_album">上传相册</string>
    <string name="uploading">正在上传</string>
    <string name="upload_fail">上传失败</string>
    <string name="please_input_new_phone_number">请输入新的手机号码</string>
    <string name="recommend">推荐</string>
    <string name="demand_management">需求管理</string>
    <string name="message">消息</string>
    <string name="service_management">服务管理</string>
    <string name="mine">我的</string>
    <string name="everybody_search">大家都在搜</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="reset">重置</string>
    <string name="all_category">全部分类</string>
    <string name="nationwide">全国</string>
    <string name="all">全部</string>
    <string name="category">分类</string>
    <string name="strategies_to_make_money">赚钱攻略</string>
    <string name="intelligent_recommendation">最近来过</string>
    <string name="publish_recently">最新发布</string>
    <string name="advanced_filter">高级筛选</string>
    <string name="demand_lobby_title">需求</string>
    <string name="service_lobby_title">服务</string>
    <string name="change_service_lobby">找服务</string>
    <string name="change_demand_lobby">找需求</string>
    <string name="recommend_service_introduction">服务介绍</string>
    <string name="recommend_my_advantage">我的优势</string>
    <string name="operation">运营</string>
    <string name="generalize">推广</string>
    <string name="business_and_ground_promotion">业务/地推</string>
    <string name="official_documents_and_correspondence">文案</string>
    <string name="design">设计</string>
    <string name="photography">摄影</string>
    <string name="consult_counselor">咨询顾问</string>
    <string name="finance_and_taxation">财税</string>
    <string name="specialist_recommend">专家推荐</string>
    <string name="click_to_change_demand_or_service">点击这里可以\n切换需求或者服务</string>
    <string name="change_to_find_service">切换找服务</string>
    <string name="change_to_find_demand">切换找需求</string>
    <string name="recommend_details_first_line">1、在领到预约后，雇主才付款。</string>
    <string name="recommend_details_second_line">2、在领到预约后，雇主才付款，在领到预约后，雇主才付款，在领到预约后，雇主才付款。</string>
    <string name="recommend_details_third_line">3、在领到预约后，雇主才付款，在领到预约后，雇主才付款。</string>
    <string name="publish_service">发布服务</string>
    <string name="service_category">服务品类</string>
    <string name="please_write">请填写</string>
    <string name="voice_introduction">语音介绍</string>
    <string name="voice_introduction_content">您可以录制一段60秒的语音介绍您的服务！</string>
    <string name="voice_loading">语音加载中</string>
    <string name="my_advantage">我的优势（20~100字）</string>
    <string name="my_advantage_hint">请简单描述你熟练掌握的技能及经验</string>
    <string name="service_introduction">服务介绍（30~500字）</string>
    <string name="service_introduction_hint">请具体描述您的服务内容，将更快为您匹配需求，可点击右侧查看示例模板</string>
    <string name="see_example">查看示例</string>
    <string name="publish_immediately">立即发布</string>
    <string name="publish_service_add_educational_experience_content">第二步：添加教育经历</string>
    <string name="publish_service_add_work_experience_content">第三步：添加工作经历</string>
    <string name="publish_service_add_honor_and_qualification_content">第四步：添加荣誉资质</string>
    <string name="compile_service">编辑服务</string>
    <string name="confirm_compile">确认编辑</string>
    <string name="bid_to_make_money_at_once">立即投标赚钱</string>
    <string name="my_offer">我的报价</string>
    <string name="bid_to_make_money_at_once_hint">双方沟通后可以修改</string>
    <string name="service_my_advantage">我的优势（20~100字）</string>
    <string name="bid_at_once">立即投标</string>
    <string name="modify_service_price">修改服务价格</string>
    <string name="original_price">原价格：</string>
    <string name="service_modify_price">修改价格：</string>
    <string name="service_city">服务城市</string>
    <string name="select_service_city">选择服务城市</string>
    <string name="please_select_service_city">请选择服务城市</string>
    <string name="select_location">点击左侧菜单栏，选择省份城市</string>
    <string name="select_category">点击左侧菜单栏，选择服务品类</string>
    <string name="preview">预览</string>
    <string name="wechat_mini_apps_service_description">大神{name}在此,一大波优质的服务来袭,快来雇佣Ta吧!</string>
    <string name="publish_demand">发布需求</string>
    <string name="employ_at_once">立即雇佣</string>
    <string name="work_start_time">工作开始时间</string>
    <string name="please_select">请选择</string>
    <string name="payment_cycle">交付周期</string>
    <string name="day">天</string>
    <string name="aggregate_demand_budget">需求总预算</string>
    <string name="please_fill_in">请填写</string>
    <string name="yuan">元</string>
    <string name="demand_introduction">需求介绍（30-500字）</string>
    <string name="demand_introduction_hint_text">请具体描述您想要的需求内容，将更快为您找到适合的服务商，如：服务类型，服务内容，服务周期等</string>
    <string name="trusteeship_amount_content">90%的雇主预付了托管金额找到满意的人才。若没有成交，订单过期后，托管金额退回您的账号中。</string>
    <string name="payment_method">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="allintask_account">领到账号</string>
    <string name="publish_demand_and_pay">发布需求并支付</string>
    <string name="intelligent_match_inform_service_provider">智能匹配通知服务商</string>
    <string name="go_to_choose">去选标</string>
    <string name="service_offer">服务报价</string>
    <string name="recommend_more_title">同时为我推荐更多服务商</string>
    <string name="recommend_more_content">开启后将有更多服务商投标，95%雇主已开启</string>
    <string name="demand_category">需求品类</string>
    <string name="employer_demand_details_demand_introduction">需求介绍</string>
    <string name="delay_completed">已延长</string>
    <string name="manage_demand">管理需求</string>
    <string name="completed_and_find_more_demand">已完成，去找更多需求</string>
    <string name="expired_and_find_more_demand">已过期，去找更多需求</string>
    <string name="has_bid_and_chat">已投标，立即沟通</string>
    <string name="employment_price">雇用价格</string>
    <string name="compile_demand">编辑需求</string>
    <string name="recommend_details_apply_amount">申请：</string>
    <string name="recommend_details_work_way">工作方式：</string>
    <string name="recommend_details_site">地点：</string>
    <string name="service_payment">服务薪资：</string>
    <string name="confirm_employ">确认雇佣</string>
    <string name="wechat_mini_apps_demand_description">大牛快到碗里来,{category}需求,预算￥{price},快来挣钱吧!</string>
    <string name="audit_status">审核状态</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="voice_demo">语音示例</string>
    <string name="record_cancel_tip">松开手指，取消发送</string>
    <string name="record_cancel_pull_tip">手指上滑，取消发送</string>
    <string name="record_cancel_little_time">剩余时间，即将结束</string>
    <string name="record_waiting">&#12288;&#12288;&#12288;请稍候&#12288;&#12288;&#12288;</string>
    <string name="chatting_record_audio_permission_ask_for">请提供录音播放权限！</string>
    <string name="record_time_short_tip">&#12288;按住时间太短！&#12288;</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="error_voice_file_destroy">语音文件已损坏！</string>
    <string name="my_account">我的账户</string>
    <string name="my_photo_album">我的相册</string>
    <string name="my_collection">我的收藏</string>
    <string name="authentication_center">认证中心</string>
    <string name="online_customer_service">在线客服</string>
    <string name="about_us">关于我们</string>
    <string name="message_notification">消息通知</string>
    <string name="system_notification">系统通知</string>
    <string name="activity_message">活动消息</string>
    <string name="read">已读</string>
    <string name="unread">未读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="educational_institution">教育机构</string>
    <string name="please_select_your_school">请选择您的学校</string>
    <string name="major">专业</string>
    <string name="please_select_major">请选择专业</string>
    <string name="education_background">学历</string>
    <string name="please_input_select_education_background">请选择学历</string>
    <string name="start_time">开始时间</string>
    <string name="please_select_start_time">请选择开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="remove">移除</string>
    <string name="work_unit">工作单位</string>
    <string name="please_input_work_unit">请填写工作单位</string>
    <string name="position">职位</string>
    <string name="please_input_position">请填写职位</string>
    <string name="awards_or_certificate">奖项/证书</string>
    <string name="please_input_awards_name_or_certificate_name">请输入奖项名称或者证书名称</string>
    <string name="issuing_authority">颁发机构</string>
    <string name="please_input_issuing_authority">请输入颁发的机构</string>
    <string name="acquisition_time">获取时间</string>
    <string name="please_select_acquisition_time">请选择获取时间</string>
</resources>