<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <include layout="@layout/include_divider_line" />

    <LinearLayout
        android:id="@+id/ll_educational_institution"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educational_institution"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_educational_institution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/please_select_your_school"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_major"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:hint="@string/please_select_major"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_educational_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_background"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_educational_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:text="@string/please_input_select_education_background"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_start_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/please_select_start_time"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_end_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/please_select_end_time"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/remove"
        android:textColor="@color/text_dark_black"
        android:textSize="@dimen/small_size" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/selector_common_button_background_color"
        android:text="@string/save"
        android:textColor="@drawable/selector_common_button_text_color" />

</LinearLayout>