<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_color" />

    <LinearLayout
        android:id="@+id/ll_educational_institution"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educational_institution"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_educational_institution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="@string/please_select_your_school"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_color" />

    <LinearLayout
        android:id="@+id/ll_major"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:hint="@string/please_select_major"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_color" />

    <LinearLayout
        android:id="@+id/ll_educational_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education_background"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_educational_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="53dp"
            android:text="@string/please_input_select_education_background"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_color" />

    <LinearLayout
        android:id="@+id/ll_start_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/please_select_start_time"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/common_background_color" />

    <LinearLayout
        android:id="@+id/ll_end_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:text="@string/please_select_end_time"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_background_color"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/remove"
            android:textColor="@color/text_dark_black"
            android:textSize="@dimen/small_size" />

    </RelativeLayout>

</LinearLayout>